@@ -58,6 +58,5 @@ fi
 # ========================================
 AC_OUTPUT(
 Makefile
-src/Makefile
-src/alpha/Makefile
+topics/Makefile
 )
